tests/suites/scctests/cc/error/0009-unmatchedcppelif.c
/*
PATTERN:
0009-unmatchedcppelif.c:7: error: #elif without #ifdef/ifndef
.
*/

#elif 1

